--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,3 +18,45 @@
     font-weight: bolder;
     color: rgb(15, 13, 132);
 }
+.custom-bg{
+    display: inline-block;
+    color: white;
+    padding: 7px 5px;
+    border-radius: 10px;
+    background: linear-gradient(to right, #2e2eba, #f06595, #a9266c);
+}
+.cs-design
+{
+    background: linear-gradient(45deg, #2e2eba, #f06595, #a9266c);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+}
+.btn-left {
+    width: 30%;
+    margin-right: 30px;
+    background-color: blue;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+
+  .btn-right {
+    width: 30%;
+    background-color: transparent;
+    color: black;
+    border: 2px solid rgb(135, 135, 139);
+    padding: 8px 18px;
+    cursor: pointer;
+    transition: background-color 0.3s ease, color 0.3s ease;
+    border-radius: 5px;
+  }
+
+  .btn-right:hover {
+    background-color: blue;
+    color: white;
+    border: none;
+  }
