--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,139 +1,207 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.navigation{
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+.navigation {
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
-#navbarNav ul li a
-{
-    color: rgba(0, 0, 0, 0.594);
+
+#navbarNav ul li a {
+  color: rgba(0, 0, 0, 0.594);
 }
-#navbarNav ul li a:hover
-{
-    color: crimson;
+
+#navbarNav ul li a:hover {
+  color: crimson;
 }
-#logo{
-    font-weight: bolder;
-    color: rgb(15, 13, 132);
+
+#logo {
+  font-weight: bolder;
+  color: rgb(15, 13, 132);
 }
-.custom-bg{
-    display: inline-block;
-    color: white;
-    padding: 7px 5px;
-    border-radius: 10px;
-    background: linear-gradient(to right, #2e2eba, #f06595, #a9266c);
+
+.custom-bg {
+  display: inline-block;
+  color: white;
+  padding: 7px 5px;
+  border-radius: 10px;
+  background: linear-gradient(to right, #2e2eba, #f06595, #a9266c);
 }
-.cs-design
-{
-    background: linear-gradient(45deg, #2e2eba, #f06595, #a9266c);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-clip: text;
+
+.cs-design {
+  background: linear-gradient(45deg, #2e2eba, #f06595, #a9266c);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
 }
+
 .btn-left {
-    width: 30%;
-    margin-right: 30px;
-    background-color: blue;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-  }
-  .down-btn
-  {
-    background-color: blue;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 5px;
-    cursor: pointer;
-    opacity: 0.6;
-    transition: background-color 0.3s ease;
-  }
-  .down-btn:hover{
-    opacity: 1;
-  }
-  .btn-right {
-    width: 30%;
-    background-color: transparent;
-    color: black;
-    border: 2px solid rgb(135, 135, 139);
-    padding: 8px 18px;
-    cursor: pointer;
-    transition: background-color 0.3s ease, color 0.3s ease;
-    border-radius: 5px;
-  }
-
-  .btn-right:hover {
-    background-color: blue;
-    color: white;
-    border: none;
-  }
-  .gradient-box{
-    width: 500px;
-    height: 300px;
-    background-image: radial-gradient( circle farthest-corner at 3.2% 49.6%,  rgba(124, 12, 139, 0.87) 0%, rgba(160, 52, 108, 0.72) 83.6% );
-    border-radius: 40px;
-  }
-
-  .gradient-box img{
-    position: relative;
-    top: 20px;
-    left: 20%;
-    width: 300px;
-    height: 250px;
-  }
-  .bg-custom{
-    background-color: #e0d8d82c;
-  }
-.foot-url a
-{
-    text-decoration: none;
+  width: 30%;
+  margin-right: 30px;
+  background-color: blue;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
-.foot-url a:hover
-{
-    text-decoration: underline;
+
+.down-btn {
+  background-color: blue;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  opacity: 0.6;
+  transition: background-color 0.3s ease;
 }
-.rsm-btn{
+
+.down-btn:hover {
+  opacity: 1;
+}
+
+.btn-right {
+  width: 30%;
+  background-color: transparent;
+  color: black;
+  border: 2px solid rgb(135, 135, 139);
+  padding: 8px 18px;
+  cursor: pointer;
+  transition: background-color 0.3s ease, color 0.3s ease;
+  border-radius: 5px;
+}
+
+.btn-right:hover {
+  background-color: blue;
+  color: white;
+  border: none;
+}
+
+.gradient-box {
+  width: 500px;
+  height: 300px;
+  background-image: radial-gradient(circle farthest-corner at 3.2% 49.6%, rgba(124, 12, 139, 0.87) 0%, rgba(160, 52, 108, 0.72) 83.6%);
+  border-radius: 40px;
+}
+
+.gradient-box img {
+  position: relative;
+  top: 20px;
+  left: 20%;
+  width: 300px;
+  height: 250px;
+}
+
+.bg-custom {
+  background-color: #e0d8d82c;
+}
+
+.foot-url a {
   text-decoration: none;
 }
-.rsm-btn:hover{
+
+.foot-url a:hover {
+  text-decoration: underline;
+}
+
+.rsm-btn {
+  text-decoration: none;
+}
+
+.rsm-btn:hover {
   color: white;
 }
-.blue-head{
+
+.blue-head {
   color: blue;
 }
+
 .card {
   box-shadow: 3px 4px 8px rgba(0, 0, 0, 0.2);
   border: none;
   border-radius: 10px;
   margin-bottom: 20px;
 }
+
 .left-side {
   width: 30%;
   float: left;
 }
+
 .right-side {
   width: 70%;
   float: left;
 }
-.custom-width{
+
+.custom-width {
   width: 58%;
 }
-.cs-bg{
+
+.cs-bg {
   border-radius: 10px;
   background-color: #c6cbcb63;
 }
-.pink-head{
+
+.pink-head {
   color: rgb(207, 17, 112);
 }
-.bg-option
-{
+
+.bg-option {
   background-color: #c6cbcb63;
   border-radius: 10px;
+}
+
+.text-cs-color {
+  color: rgb(55, 57, 60);
+}
+
+.cs-rounded {
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+.foot-up
+{
+  background: linear-gradient(to right, #f06595, #a9266c);
+  height: 200px;
+}
+.transparent-button {
+  position: relative;
+  background-color: transparent; 
+  border: 2px solid white; 
+  border-radius: 12px; 
+  color: white; 
+  padding: 10px 20px; 
+  font-size: 16px; 
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s; 
+}
+.transparent-button::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: -100%;
+  height: 100%;
+  width: 100%;
+  background: #c00751;
+  transition: left 0.3s;
+  border-radius: 12px; 
+  z-index: -2;
+  visibility: hidden;
+}
+
+.transparent-button:hover::before {
+  visibility: visible;
+  color: white;
+  left: 0;
+}
+
+.transparent-button:hover {
+  color: white;
+}
+
+.transparent-button {
+  z-index: 1;
 }
